despliegue-nodos-ethereum-con-kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethereum
  labels:
    app.kubernetes.io/part-of: ethereum-node-demo
