despliegue-nodos-ethereum-con-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth-node
  namespace: ethereum
  labels:
    app: geth-node
spec:
  selector:
    app: geth-node
  ports:
    - name: rpc
      port: 8545
      targetPort: rpc
    - name: p2p
      port: 30303
      targetPort: p2p
  clusterIP: None
